# pdf_extractor

./: README.md  requirements.txt  setup.cfg
src/pdf_extractor/: ocr_prototype.py
tests/: pdf_file_generator.py
