[metadata]
name = pdf_extractor
version = 0.1.0
description = A PDF extractor prototype
author = LBELUS
author_email = lorris.belus@icloud.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/my_project
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    # Put required libraries here
    requests

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source = pdf_extractor
